crates/solidity/testing/snapshots/bindings_output/contracts/unnamed_function/generated/0.8.27-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or ImmutableKeyword or InternalKeyword or OverrideKeyword or PrivateKeyword or PublicKeyword or TransientKeyword.
   ╭─[input.sol:2:25]
   │
 2 │ ╭─▶     function () payable {
   ┆ ┆   
 4 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭─▶ contract Test {
   ┆ ┆   
 5 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
───╯
